--- a/styles/style.css
+++ b/styles/style.css
@@ -148,3 +148,27 @@ bottom {
 .icon-right {
     display: flex;
 }
+
+#alert-cover{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    display: none;
+}
+
+#alert-noti{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    background: rgb(176, 166, 104);
+    border: 10px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
